Thu Oct 18 09:23:03 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* hash.c (initialize_copy): duping should rehash the hash.

	* test/ruby/test_hash.rb: added a test to ensure rehash.

Wed Oct 17 21:16:47 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* common.mk (WPROGRAM): need same dependencies as PROGRAM.

	* cygwin/GNUmakefile.in (uncommon.mk): move include position
	  below WPROGRAM definition to be defined in uncommon.mk.

	* ext/extmk.rb (all, static): fix make rubyw.exe failure with make -jN.
	  If make of ruby.exe and rubyw.exe run in parallel, link dll and link
	  exe run in parallel, which causes link failure on mingw. To fix this,
	  we make ruby.exe and rubyw.exe in one make process.
	  [ruby-core:48007] [Bug #7165]

Wed Oct 17 16:25:34 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm2_method_missing.rb: add a benchmark to measure
	  performance of invoking `method_missing'.

Wed Oct 17 16:23:17 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_getivar): fix to use `aux.index' instead of
	  `aux.opt_pc'.

Wed Oct 17 16:03:54 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method_missing): make a refactoring
	  about method_missing process. Use `vm_call_method()' to invoke
	  `method_missing' method instead of `rb_funcall2()'.
	  In `vm_call_method()', set fastpath to `vm_call_method_missing()'
	  if it can be cached.

	* vm_core.h (rb_call_info_t): add new field
	  `rb_call_info_t::aux::missing_reason' to pass the reason to
	  `vm_call_method_missing()'.

Wed Oct 17 15:33:12 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (opt-dir): allow multiple directories separated by
	  $PATH_SEPARATOR as well as dir_config in mkmf.rb. [ruby-core:47868]
	  [Bug #7120]

Wed Oct 17 15:08:13 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb: fix Net::IMAP::ResponseParser to accept
	  message/delivery-status ([ruby-core:47920] [Bug #7146]),