@@ -1,3 +1,8 @@
+Thu Oct 18 10:30:34 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (assignable_gen): fail if yyerror occurred.  fix a bug in
+	  r36973.
+
 Thu Oct 18 09:23:03 2012  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* hash.c (initialize_copy): duping should rehash the hash.
